# OpenClaw_mini

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
config/: openclawish.env.example
docs/: architecture.md  architecture.zh-CN.md  first-commit-checklist.md  first-commit-checklist.zh-CN.md  operations.md  operations.zh-CN.md  security.md  security.zh-CN.md  setup.md  setup.zh-CN.md  skills.md  skills.zh-CN.md  workflows.md  workflows.zh-CN.md
scripts/: install_mac_mini.sh  install_mac_mini_zh.sh  load_env.sh  start_bot.sh
skills/: repo_audit.json  screenshot.json  system_ops.json
src/openclawish/: __init__.py  cli.py  config.py  deploy.py  executor.py  models.py  planner.py  policy.py  service.py  skills.py  storage.py  telegram_bot.py
tests/: test_deploy.py  test_planner.py  test_planner_gemini.py  test_policy.py  test_service.py  test_skills.py
